@@ -1,5 +1,5 @@
 #
-# set list of bad nodes
+# unset list of bad nodes
 #
 # Copyright (c) 1998 - Dirk Koopman G1TLH
 #
@@ -12,7 +12,7 @@ my @out;
 for (@f) {
 	return (1, $self->msg('e19')) if /[^\s\w_\-\/]/;
 	my $call = uc $_;
-	push @DXProt::nodx_node, $call;
-	push @out, $self->msg('badnode1', $call);
+	@DXProt::nodx_node = grep { !$call =~ /^$_/ } @DXProt::nodx_node;
+	push @out, $self->msg('badnode2', $call);
 }
 return (1, @out);
