@@ -14,6 +14,9 @@ package DXM;
                 already => '$_[0] already connnected',
 				anns => 'Announce flag set on $_[0]',
 				annu => 'Announce flag unset on $_[0]',
+				badnode1 => '$_[0] is now a bad node',
+				badnode2 => '$_[0] is now a good node',
+				badnode3 => 'List of Bad Nodes:-',
 				bbse1 => 'Please enter your BBS address,, set/bbs <your bbs address>',
 				bbs => 'Your BBS Address is now \"$_[0]\"',
 				beepoff => 'Beeps are now off',
